Increased allocations table alignment style selector specificity and fixed background styling for disabled 'remove' button in manage team modal

--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -106,7 +106,7 @@
     font-size: 0.875rem; /* 14px (approved deviation from design) */
   }
 }
-td {
+.allocations-table td {
   vertical-align: top !important; /* override InfiniteScrollTable */
 }
 
